# crates-io-cn

./: .gitattributes  .gitignore  CODE_OF_CONDUCT.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md
.github/: FUNDING.yml
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: build.yml
config/: log4rs.yml
easy-git/: Cargo.toml
easy-git/src/: error.rs  lib.rs
scratch/: check.py  ngx-config  run.py
src/: error.rs  helper.rs  index.rs  main.rs  systemd.rs
src/easy_git/: error.rs  mod.rs
src/simple_obs/: credentials.rs  mod.rs  obs.rs
src/upyun/: mod.rs  provider.rs
upyun/: Cargo.toml
upyun/src/: error.rs  lib.rs  provider.rs
