[package]
name = "crates-io-cn"
version = "0.1.0"
authors = ["lightsing <light.tsing@gmail.com>"]
edition = "2018"
license = "MIT OR Apache-2.0"
default-run = "crates-io-cn"

[features]
systemd-integration = ["systemd"]
upyun-oss = ["upyun"]
obs = ["chrono", "hmac", "sha-1", "md-5", "base64", "reqwest/json"]
sync = ["clap", "sqlite", "directories"]

[[bin]]
name = "sync-crates"
required-features = ["clap"]

[dependencies]
log = "0.4"
log4rs = "1.0"
futures = "0.3"
lazy_static = "1.4"
async-trait = "0.1"
async-channel = "1.5"
derive_more = "0.99"
thiserror = "1.0"
tokio-stream = "0.1"
dotenv = "0.15"
actix-web = "4.0.0-beta.3"
actix-http = "3.0.0-beta.3"
bytes = "1"
git2 = "0.13"
serde_json = "1.0"
systemd = { version = "0.8", optional = true }
chrono = { version = "0.4", optional = true }
hmac = { version = "0.10", optional = true }
sha-1 = { version = "0.9", optional = true }
md-5 = { version = "0.9", optional = true }
base64 = { version = "0.13", optional = true }
clap = { version = "2.3", optional = true }
sqlite = { version = "0.25", optional = true }
directories = { version = "3.0", optional = true }

[dependencies.tokio]
version = "1"
features = ["sync", "rt-multi-thread"]

[dependencies.reqwest]
version = "0.11"
features = ["stream"]

[dependencies.serde]
version = "1.0"
features = ["derive"]

[dependencies.upyun]
version = "0.1.0"
path = "upyun"
optional = true

[dependencies.easy-git]
version = "0.1.0"
path = "easy-git"

[workspace]
members = ["upyun", "easy-git"]